Bug 184642 - Dissociating all future events does not work any more
Summary: Dissociating all future events does not work any more
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-17 14:04 UTC by Reinhold Kainhofer
Modified: 2009-02-25 13:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Reinhold Kainhofer 2009-02-17 14:04:46 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

In KOrganizer 4.2, "Dissociate future recurrences" does no longer work correctly. Instead, it only dissociates the selected instance instead of all future ones.
Comment 1 Sergio Martins 2009-02-18 11:37:17 UTC
This is not a KDE4.2 issue, it doesn't work since 2004, commit 347673 changed:

dissociateOccurrence( incidence, date, KOPrefs::instance()->timeSpec(), false );

to

dissociateOccurrence( incidence, date, KOPrefs::instance()->timeSpec(), true );

I guess it's a typo introduced while implementing locking, I've changed it to the correct line again but it still doesn't work correctly - It doesn't dissociate future occurrences, it dissociates past occurrences!

For example, if you have an event with instances I1, I2, I3, I4, I5, and click on top of I3 and "dissociate future occurrences", it will create the event composed by I1 and I2, and the event composed by I3, I4, I5.

My suggestion to fix this would be to change the boolean to true, and the text to "Dissociate Past Occurrences".
Comment 2 Sergio Martins 2009-02-25 13:25:41 UTC
SVN commit 931521 by smartins:

"Dissociate future recurrences" now works:

1. Pass false instead of true to mCalendar->dissociateOccurrence().
2. Pass the next occurrence's date so it dissociates future incidences instead of future+current.

BUG: 184642


 M  +14 -1     calendarview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=931521
Comment 3 Reinhold Kainhofer 2009-02-25 13:42:19 UTC
NOOO, please don't do 2. When you want to dissociate all events starting from a given date, you typically click on the first one that should be modified, not on the last one that should not. Maybe the text was misleading, but the functionality should definitely be "dissociate all future events starting with this one". 

That's the same behavior as when you move an instance of a recurring event and select ". The moved event will be the first instance of the future events. In both cases, the behavior should be the same to be consistent.