"Dissociate future recurrences" now works:

1. Pass false instead of true to mCalendar->dissociateOccurrence().
2. Pass the next occurrence's date so it dissociates future incidences instead of future+current.

BUG: 184642

svn path=/trunk/KDE/kdepim/; revision=931521